# Retail

./: .gitignore  README.md  apparel_dataset.xlsx  dashboard.py  ecommerce_data_sample.xlsx  pyproject.toml
.streamlit/: config.toml
Data/: Actual_Sample_Data.xlsx
scripts/: generate_rotated_test_dataset.py
src/retail_analyzer/: __init__.py  anomalies.py  cli.py  config.py  context_anomalies.py  duplicate_detection.py  embeddings.py  excel_io.py  excel_preview.py  excel_style.py  image_fetch.py  image_similarity.py  merge.py  pipeline.py  retail_anomaly_detection.py
tests/: test_context_anomalies.py  test_guess_columns.py  test_merge.py  test_natural_language.py  test_pipeline.py
tests/fixtures/: sample.xlsx
tests/fixtures/rotated_duplicate_dataset/: rotated_duplicates_sample.xlsx
