[tool.poetry]
name = "retail-excel-analyzer"
version = "0.1.0"
description = "Retail catalog Excel analysis: similar product images and anomalies."
authors = ["Retail Project"]
packages = [{ include = "retail_analyzer", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
openpyxl = "^3.1.2"
Pillow = "^10.2.0"
requests = "^2.31.0"
numpy = "^1.26.0"
scikit-learn = "^1.4.0"
torch = "^2.2.0"
sentence-transformers = "^2.6.0"
typer = "^0.15.0"
tqdm = "^4.66.0"
streamlit = "^1.55.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[tool.poetry.scripts]
retail-analyze = "retail_analyzer.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
